// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scrape kanji > should be the same kanji 1`] = `
{
  "alternative_meanings": undefined,
  "character": undefined,
  "kunyomi_reading": undefined,
  "level": undefined,
  "meaning_hints": [],
  "meaning_mnemonic": [],
  "nanori_reading": undefined,
  "onyomi_reading": undefined,
  "primary_meaning": undefined,
  "reading_hints": [],
  "reading_mnemonic": [],
}
`;

exports[`scrape kanji > should be the same kanji found in vocabulary 1`] = `
{
  "kanji": undefined,
  "vocabulary": [],
}
`;

exports[`scrape kanji > should be the same visually kanji 1`] = `
{
  "kanji": undefined,
  "similar_kanji": [],
}
`;
